--- a/YazLabSite/Views/Asama1/Index.cshtml
+++ b/YazLabSite/Views/Asama1/Index.cshtml
@@ -4,11 +4,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Kelime Frekansı Bulma</h2>
 <form method="post">
     <div class="form-group">
-        <label>Frekans için url giriniz</label>
-        <input type="text" name="gelenUrl" class="form-control" />
+        <label>Frekans için url giriniz: </label>
+        <input  style="min-width:35%;" type="text" name="gelenUrl" class="form-control" />
         <button type="submit" class="btn btn-success">Getir</button>
 
     </div>
