--- a/YazLabSite/Views/Shared/_Layout.cshtml
+++ b/YazLabSite/Views/Shared/_Layout.cshtml
@@ -32,16 +32,16 @@
                 /* Add a color to the active/current link */
                 .topnav a.active {
                     background-color: #4CAF50;
-                    color: white;
+                    color: #333;
                 }
     </style>
     <meta name="viewport" content="width=device-width" />
-    <title>_Layout</title>
+    <title>Benzerlik Tespit Sistemi</title>
 </head>
 <body>
     <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="#news">News</a>
+        <a href="https://localhost:44356/asama1/Index">Aşama1</a>
+        <a href="https://localhost:44356/asama2/index">Aşama2</a>
         <a href="#contact">Contact</a>
         <a href="#about">About</a>
     </div>
