--- a/YazLabSite/Views/Asama3/Son.cshtml
+++ b/YazLabSite/Views/Asama3/Son.cshtml
@@ -25,11 +25,13 @@
 
 
 
-    @Model.KeywordListesi.Count
+<p>@Model.Site1--------------------------------------------------------- @Model.Site2    </p>  
+
     <ol>
+        
         @for (int i = 0; i < sayi; i++)
         {
-            <li>@Model.KeywordListesi[i].Word @Model.KeywordListesi[i].Frequency @Model.KeywordListesi2[i].Word @Model.KeywordListesi2[i].Frequency</li>
+        <li>@Model.KeywordListesi[i].Word @Model.KeywordListesi[i].Frequency--------------------------------------------------------- @Model.KeywordListesi2[i].Word @Model.KeywordListesi2[i].Frequency</li>
         }
 
     </ol>
