--- a/YazLabSite/Views/Asama3/Son.cshtml
+++ b/YazLabSite/Views/Asama3/Son.cshtml
@@ -8,7 +8,7 @@
 
 <h2>AŞAMA 23</h2>
 
-<p>Benzerlik oranı: @Model.Benzerlik</p>
+<p>Benzerlik oranı: %@Model.Benzerlik</p>
 
 @if (Model.KeywordListesi != null && Model.KeywordListesi2 != null)
 {
